 * cqlsh COPY FROM fails with []{} chars in UDT/tuple fields/values (CASSANDRA-11633)
 * clqsh: COPY FROM throws TypeError with Cython extensions enabled (CASSANDRA-11574)
 * cqlsh: COPY FROM ignores NULL values in conversion (CASSANDRA-11549)
 * Validate levels when building LeveledScanner to avoid overlaps with orphaned sstables (CASSANDRA-9935)


2.1.14
 * (cqlsh) Fix potential COPY deadlock when parent process is terminating child
   processes (CASSANDRA-11505)
 * Replace sstables on DataTracker before marking them as non-compacting during anti-compaction (CASSANDRA-11548)
 * Checking if an unlogged batch is local is inefficient (CASSANDRA-11529)
 * Fix paging for COMPACT tables without clustering columns (CASSANDRA-11467)
 * Fix out-of-space error treatment in memtable flushing (CASSANDRA-11448)
 * Backport CASSANDRA-10859 (CASSANDRA-11415)
 * COPY FROM fails when importing blob (CASSANDRA-11375)
 * Backport CASSANDRA-10679 (CASSANDRA-9598)
 * Don't do defragmentation if reading from repaired sstables (CASSANDRA-10342)
 * Fix streaming_socket_timeout_in_ms not enforced (CASSANDRA-11286)
 * Avoid dropping message too quickly due to missing unit conversion (CASSANDRA-11302)
 * COPY FROM on large datasets: fix progress report and debug performance (CASSANDRA-11053)
 * InvalidateKeys should have a weak ref to key cache (CASSANDRA-11176)
 * Don't remove FailureDetector history on removeEndpoint (CASSANDRA-10371)
 * Only notify if repair status changed (CASSANDRA-11172)
 * Add partition key to TombstoneOverwhelmingException error message (CASSANDRA-10888)
 * Use logback setting for 'cassandra -v' command (CASSANDRA-10767)
 * Fix sstableloader to unthrottle streaming by default (CASSANDRA-9714)
 * Fix incorrect warning in 'nodetool status' (CASSANDRA-10176)
 * Properly release sstable ref when doing offline scrub (CASSANDRA-10697)
 * Improve nodetool status performance for large cluster (CASSANDRA-7238)